# Coreprotect-mining-heuristics

./: .dockerignore  .env.example  .gitignore  CahierCharge.md  Makefile  README.md  docker-compose.yml  pyproject.toml  readmeAnalyse.md  readmeArbre.md  readmePreview.md
api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mc-with-docker.ps1  requirements.txt
data/labels/: README.md
data/models/: anomaly_iforest_ancient_debris.joblib  anomaly_iforest_diamond.joblib
docker/postgres-sqlite/: Dockerfile
docker/postgres-sqlite/init/: 001-init.sql
notebooks/: README.md
reports/benchmarks/: benchmark_history.csv
scripts/: README.md  analyze_mining_sessions.py  benchmark_pipeline.py  extract_mining_events.py  make_anomaly_figures.py  render_mining_3d.py  split_mining_page.py  train_anomaly_model.py
src/Java/: README.md  dependency-reduced-pom.xml  pom.xml
src/Java/src/main/java/net/utruna/xrayindexer/: GatewayPlugin.java
src/Java/src/main/java/net/utruna/xrayindexer/db/: ReadOnlyCoreProtectDb.java
src/Java/src/main/java/net/utruna/xrayindexer/http/: AuthFilter.java  BlocksHandler.java  Csv.java  GatewayServer.java  HealthHandler.java  MapHandler.java  Query.java  QueryResponder.java
src/xray_detector/: __init__.py  anomaly_model.py  cli.py  config.py  features.py  gateway_client.py  mining.py  paths.py  pipeline.py  sessionization.py
tests/: test_anomaly_model.py  test_api_health.py  test_config_and_sessionization.py  test_features.py  test_gateway_client.py  test_ground_truth.py
(+4 files in other folders)
